# labels

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  style.css
src/: main.rs
