[package]
name    = "labels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew     = { git = "https://github.com/yewstack/yew", rev = "47fad81" }
web-sys = "0.3.0"
serde   = { version = "1.0.0", features = ["derive"] }
csv     = "1.1.0"
